# Windows-For-Hacking

./: README.md
Sudo/: README.md  sudo.bat
Touch/: README.md
Whois/: README.md
Wifi_Hacking/: .gitignore  Bunny.py  README.md  all.py  cash.txt  hash.py  passwd.txt  test.py  wifiinterface.py
Wifi_Hacking/bunny/: Cargo.toml  README.md  build.rs
Wifi_Hacking/bunny/src/: crack.rs  crack.txt  main.rs
Wifi_Hacking/bunny/src/components/: crack.rs  dump.rs  dump.txt  monitor.txt  monitormood.rs  pcapformatter.rs  pcapformatter.txt  scan.rs
Wifi_Hacking/bunny/src/lib/: dump.c  savedump.c  test.c  test.txt
Winget/: README.md
file/: try.py
lsub/: test.cpp
lsusb/: Cargo.toml  README.md  test.py
lsusb/src/: main.rs
