[package]
name = "bunny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }
owo-colors = "3.5.0"
sysinfo = "0.29.10"
winapi = { version = "0.3", features = ["iphlpapi","netioapi"] }
ipconfig = "0.3.2"
pnet = "0.34.0"