[package]
name = "bunny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }
owo-colors = "3.5.0"
sysinfo = "0.29.10"
winapi = { version = "0.3.9", features = ["iphlpapi","netioapi","wlanapi","minwindef","guiddef","winerror","ifdef","winuser"] }
ipconfig = "0.3.2"
pnet = "0.34.0"
prettytable-rs = "0.10.0" 
ring = "0.17.5"
hex = "0.4"
crypto ="0.5.0"
hmac = "0.12.1"
sha1 = "0.10.6"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
indicatif = "0.17.7"
rand = "0.8.5"
pcap-file = "2.0.0"
pcap = "1.1.0"
libc = "0.2.150"
wifiscanner = "0.5.1"
